# tunnel-cli

./: .gitignore  INSTALL_WINDOWS.md  README.md  install-windows.bat  install-windows.ps1  install.ps1  install.sh  install_universal.sh  pyproject.toml  quick-install.sh  requirements.txt  setup.py  tunnel_cli.py
tunnel_cli/: __init__.py  __main__.py  api_client.py  auth_server.py  config_manager.py  frp_client.py  simple_tui.py  tunnel_tui.py
